[package]
name = "tree-drawer"
version = "0.3.0"
authors = ["kimjy0126 <kimjy0126@skku.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "0.117.0"
find_folder = "0.3.0"

[profile.release]
opt-level = 3
